namespace DesktopApp
{
    public interface CategoryService
    {
        Category FetchCategoryById(string id);
    }
}