namespace DesktopApp
{
    public interface TagRepository
    {
        void CreateTag(Tag tag);
    }
}