using System.Collections.Generic;

namespace DesktopApp
{
    public class Video
    {
        public List<string> Tags;
        public string CategoryId;
    }
}